# multimodal_diagnosis_system

./: .env.example  .gitignore  MICROSERVICES_GUIDE.md  README.md  aggregate_for_gemini.py  deploy.py  frontend.html  llm_loader.py  main.py  pyproject.toml  rag_chain_builder.py  requirements.txt  run_diagnosis.py  run_service.py  settings.py  vision_processors.py
.claude/: settings.local.json
app/: main.py
app/api/: routes.py  schemas.py
app/config/: settings.py
app/core/: api_models.py
app/core/llm/: loader.py
app/core/rag/: chain_builder.py
app/core/vision/: processors.py
app/services/: diagnosis.py
app/utils/: __init__.py
data/knowledge_base/: dr_treatment_guidelines.txt
data/processed/: multimodal_dr_diagnosis_for_gemini.txt
docs/: CLAUDE.md
knowledge_base/: dr_treatment_guidelines.txt
medical-o1-reasoning-SFT/: README.md  convert.py
scripts/: aggregate_for_gemini.py  deploy.py  init_vector_db.py  start_all_services.bat  start_dr_service.bat  start_gateway.bat  start_multimodal_service.bat  test_rag_diagnosis.py  test_system.py
src/: __init__.py
src/api/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py
src/core/llm/: __init__.py  loader.py
src/core/rag/: __init__.py  chain_builder.py
src/core/vision/: __init__.py  processors.py
src/services/dr_grading/: main.py
src/services/multimodal/: main.py
tests/: __init__.py  reproduce_issue.py  test_metrics_async.py
web/: frontend.html
